teller-providers/src/providers/snapshots/teller_providers__providers__test_utils__[get-after-update-secret_multiple_app-2].snap
---
source: teller-providers/src/providers/test_utils.rs
expression: read_after_update_res
---
Ok(
    [
        KV {
            value: "baz",
            key: "foo",
            from_key: "foo",
            path: Some(
                PathInfo {
                    id: "",
                    path: "secret/multiple/app-2",
                },
            ),
            provider: Some(
                ProviderInfo {
                    kind: PROVIDER_KIND,
                    name: PROVIDER_NAME,
                },
            ),
            meta: Some(
                MetaInfo {
                    sensitivity: None,
                    redact_with: None,
                    source: None,
                    sink: None,
                },
            ),
        },
    ],
)
