teller-providers/src/providers/snapshots/teller_providers__providers__test_utils__[get-secret_multiple_app-2].snap
---
source: teller-providers/src/providers/test_utils.rs
expression: res
---
[
    KV {
        value: "bar",
        key: "foo",
        from_key: "foo",
        path: Some(
            PathInfo {
                id: "",
                path: "secret/multiple/app-2",
            },
        ),
        provider: Some(
            ProviderInfo {
                kind: PROVIDER_KIND,
                name: PROVIDER_NAME,
            },
        ),
        meta: Some(
            MetaInfo {
                sensitivity: None,
                redact_with: None,
                source: None,
                sink: None,
            },
        ),
    },
]
